@@ -1,4 +1,7 @@
+> < == >< (or > < also legal)
+> < == >< (or > < also legal)
+>    < == >    <
+>   < == >   <
+>        < == >        <
 >< == ><
->< == ><
-> < == > <
 *-* All Finished *-*
